# flutter-rust-windows-embedder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml
.cargo/: config.toml  rustc-clippy-wrapper.cmd
flutter_artifacts/include/: flutter_embedder.h  flutter_windows.h  license.windows_flutter.md
flutter_artifacts/lib/: flutter_engine.lib
flutter_artifacts/test_libs/test_app/: README.md  pubspec.yaml
keyboard_map/: gen_keyboard_map.rs  mod.rs
src/: app_state.rs  constants.rs  dynamic_flutter_windows_dll_loader.rs  flutter_utils.rs  ingame_render.rs  lib.rs  main.rs  path_utils.rs  plugin_loader.rs  win32_utils.rs
src/bindings/: flutter_embedder_bindings.rs  flutter_windows_bindings.rs  keyboard_layout.rs  mod.rs
src/software_renderer/: api.rs  dynamic_flutter_engine_dll_loader.rs  mod.rs  overlays_manager_api.rs
src/software_renderer/d3d11_compositor/: compositor.rs  effects.rs  mod.rs  post_processing_renderer.rs  primitive_3d_renderer.rs  primitive_presets.rs  scoped_render_state.rs  text_3d_renderer.rs  text_presets.rs  traits.rs
src/software_renderer/gl_renderer/: angle_interop.rs  d3d_backup.rs  gl_config.rs  mod.rs  nvidia_aftermath.rs
src/software_renderer/multiview/: api.rs  backing_store.rs  compositor.rs  mod.rs  resize_decision.rs  view_surface.rs  window.rs
src/software_renderer/overlay/: d3d.rs  engine.rs  init.rs  input.rs  keyevents.rs  keyevents_tests.rs  mod.rs  overlay_impl.rs  paths.rs  platform_message_callback.rs  project_args.rs  renderer.rs  semantics_handler.rs  textinput.rs
src/software_renderer/overlays_manager_api/: keybind.rs  mod.rs  types.rs
src/software_renderer/tests/: api_tests.rs  mod.rs  (+1 more)
(+57 files in other folders)
