[package]
name = "flutter_rust_windows_embedder"
version = "0.1.0"
edition = "2024"


[lib]
name = "flutter_rust_windows_embedder"
crate-type = ["rlib"] 

# [[bin]]
# name = "flutter_rust_windows_embedder"
# path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0"
bincode = "1.3"
goblin = "0.7"
libloading = "0.7"
log         = "0.4"  
env_logger  = "0.10"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    'Win32_Graphics',
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
bindgen = "0.71.1"
