[package]
name = "flutter_rust_windows_embedder"
version = "0.1.0"
edition = "2024"


[lib]
name = "flutter_rust_windows_embedder"
crate-type = ["rlib"] 

# [[bin]]
# name = "flutter_rust_windows_embedder"
# path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0"
goblin = "0.7"
libloading = "0.7"
log         = "0.4"  
env_logger  = "0.10"
gag = "1.0.0"
byteorder = "1.5.0"
winapi = { version = "0.3.9", features = ["minwindef", "dbghelp"] }
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D"
] }
once_cell = "1.20.2"

[build-dependencies]
bindgen = "0.71.1"
